# autolight

./: .gitignore  AGENTS.md  Cargo.toml  README.md  main.py  pyproject.toml
.circleci/: config.yml
UI/: AppRuntime.qml  Main.qml  RustAdapter.qml  qmldir
UI/components/: AnalysisStrip.qml  LegacyTimelineView.qml  MarkerBlock.qml  MarkerInspector.qml  PlaybackBar.qml  ProjectToolbar.qml  StatusFooter.qml  TimelineAnalysisItem.qml  TimelineLane.qml  TimelineNavigationSurface.qml  (+6 more)
autolight/: app_controller.py  demo_audio.py
crates/autolight-core/: Cargo.toml
crates/autolight-core/src/: cache.rs  graph.rs  history.rs  lib.rs  markers.rs  project.rs  transforms.rs
crates/autolight-qt/: Cargo.toml  build.rs
crates/autolight-qt/src/: app_controller.rs  lib.rs  timeline_model.rs  transform_model.rs
crates/autolight-qt/src/app_controller/: audio.rs  job_worker.rs  jobs.rs  markers.rs  mod.rs  playback_controller.rs  project_io.rs  project_state.rs  tests.rs  timeline_controller.rs  timeline_viewport.rs
crates/autolight-qt/src/timeline_renderer/: cache.rs  mod.rs  scene_graph.cpp  scene_graph.h  waveform.rs
crates/autolight-qt/src/timeline_scene/: mod.rs  model.rs  perf.rs  scene_frame_builder.cpp  scene_frame_builder.h  scene_graph_nodes.cpp  scene_graph_nodes.h  scene_snapshot_parser.cpp  scene_snapshot_parser.h  tiles.rs  timeline_input.cpp  timeline_input.h  timeline_scene_item.cpp  timeline_scene_item.h  viewport.rs
docs/: NOW.md  PROCESS.md  ROADMAP.md
notebook/: Experiments.ipynb
scripts/: check_qml_screenshot.py
tests/: helpers.py  test_analysis.py  test_app_controller.py  test_audio_import_metadata.py  test_cache.py  test_editable_marker_inspector.py  test_end_to_end_flow.py  test_jobs.py  test_music_analysis.py  test_playback_transport.py  test_project_models.py  test_project_store.py  test_stem_artifact_workflow.py  test_timeline_model.py  test_timing_analysis.py  test_transform_picker.py  test_waveform_summary.py
(+68 files in other folders)
