[project]
name = "autolight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "essentia>=2.1b6.dev1438",
    "librosa>=0.11.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pyside6>=6.11.1",
    "scikit-learn>=1.8.0",
    "soundfile>=0.13.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
